cluster-go/applications/rhsi-3-tier-vm-siteCLOUD/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
  namespace: rhsi-3-tier-vm
  labels:
    app: java-time-host-api
    app.kubernetes.io/component: java-time-host-api
    app.kubernetes.io/instance: java-time-host-api
    app.kubernetes.io/name: java-time-host-api
    app.openshift.io/runtime-version: latest
    argocd.argoproj.io/instance: rhsi-3-tier-site-bm
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: java-time-host-api
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
